# voltedge-loadmanagementplatform

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/analytics/: __init__.py
backend/app/analytics/api/: routes.py  schemas.py
backend/app/analytics/application/: analytics_service.py
backend/app/load_control/: __init__.py
backend/app/load_control/api/: routes.py  schemas.py
backend/app/load_control/application/: commands.py  load_control_service.py  policies.py  ports.py  queries.py
backend/app/load_control/domain/: entities.py  events.py  load_area.py  repository.py  value_objects.py
backend/app/load_control/infrastructure/: event_publisher.py  intervention_service.py  mappers.py  queries.py  repository.py
backend/app/platform/: config.py  database.py  dependencies.py  logging_config.py
backend/app/shared/: domain_event.py
backend/migrations/: 001_schema.sql  002_views.sql
backend/scripts/: populate_demo.py
backend/seeds/: 001_seed_yn.sql
backend/tests/: conftest.py
backend/tests/api/: test_endpoints.py
backend/tests/unit/: test_load_area.py  test_value_objects.py
docs/: architecture.md  ddd-mapping.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
postman/: VoltEdge-LoadManagement.postman_collection.json  VoltEdge-Local.postman_environment.json  run-demo.sh
(+22 files in other folders)
